gccida/c0/use_related_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_related_value/src/cse.c:2622:27: error: use of undeclared identifier 'machine_mode'
v2 = safe_hash( subexp, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subexp)); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_related_value/src/cse.c:2622:42: error: expected expression
v2 = safe_hash( subexp, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subexp)); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_related_value/src/cse.c:2623:37: error: use of undeclared identifier 'machine_mode'
relt = lookup( subexp, v2 & 0x1F, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subexp)); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_related_value/src/cse.c:2623:52: error: expected expression
relt = lookup( subexp, v2 & 0x1F, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)subexp)); 
                                                   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/use_related_value/src/obj/cse.o] Error 1
